...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/weather_1"
        tools:context=".view.fragment.SelectCityFragment">

        <EditText
            android:id="@+id/select_city_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:hint="@string/write_the_city_name"
            android:inputType="textAutoComplete|textCapWords"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_go_to_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{viewModel::onClickToListWeather}"
            android:text="@string/select_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
